GNOME Bugzilla – Bug 630800
gtk_container_propagate_expose() declared but not implemented
Last modified: 2010-09-29 12:22:06 UTC
gtkcontainer.h declares gtk_container_propagate_expose(), but it's not implemented anywhere, leading to linker errors when trying to use it. I could just remove the declaration, but it's mentioned in the gtk_widget_send_expose() documentation, so that should be updated, or maybe gtk_widget_send_expose() should also be removed (it's used in gtkmain.c): /** * gtk_widget_send_expose: * @widget: a #GtkWidget * @event: a expose #GdkEvent * * Very rarely-used function. This function is used to emit * an expose event signals on a widget. This function is not * normally used directly. The only time it is used is when * propagating an expose event to a child %NO_WINDOW widget, and * that is normally done using gtk_container_propagate_expose(). * * If you want to force an area of a window to be redrawn, * use gdk_window_invalidate_rect() or gdk_window_invalidate_region(). * To cause the redraw to be done immediately, follow that call * with a call to gdk_window_process_updates(). * * Return value: return from the event signal emission (%TRUE if * the event was handled) **/ gint gtk_widget_send_expose (GtkWidget *widget, GdkEvent *event)
"an expose event signals on a widget" should also be "an expose event signal on a widget"
commit 14dc932fd177630083bbe55fb141e83a7e201578 Author: Benjamin Otte <otte@redhat.com> Date: Wed Sep 29 14:12:22 2010 +0200 gtk: Fix remaining mentions of gtk_container_propagate_expose() That includes the gtkcontainer.h header file.