gtk: Fix remaining mentions of gtk_container_propagate_expose()

That includes the gtkcontainer.h header file.

https://bugzilla.gnome.org/show_bug.cgi?id=630800